<resources>
    <string name="app_name">Poster</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Логин</string>
    <string name="name">Имя</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="password">Пароль</string>
    <string name="create">Создать</string>
    <string name="enter">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="photo_choose">Где взять фото?</string>
    <string name="choose_photo">Выбрать из галереи</string>
    <string name="take_photo">Сделать новое</string>
    <string name="registration_error">Ошибка при регистрации. Повторите позднее</string>
    <string name="login_error">Неверный логин или пароль</string>
    <string name="profile">Профиль</string>
    <string name="jobs">Вакансии</string>
    <string name="posts">Посты</string>
    <string name="events">События</string>
    <string name="logout">Выход</string>
    <string name="unknown_error">Неизвестная ошибка. Повторите позднее</string>
    <string name="speakers">Спикеры:</string>
    <string name="event_type_online">Онлайн</string>
    <string name="event_type_offline">Офлайн</string>
    <string name="choose_event_type">Выберите тип события</string>
    <array name="choose_event_types">
        <item>@string/event_type_online</item>
        <item>@string/event_type_offline</item>
    </array>
</resources>