<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegistrationFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/titleImageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:alpha="0.5"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/avatarCardView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:elevation="10dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_person_24" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@id/loginTextInputLayout"
        app:layout_constraintEnd_toEndOf="@id/headerLinearLayout"
        app:layout_constraintStart_toStartOf="@id/headerLinearLayout"
        app:layout_constraintTop_toBottomOf="@id/headerLinearLayout"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginTextInputLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextInputLayout"
        app:layout_constraintEnd_toEndOf="@id/headerLinearLayout"
        app:layout_constraintStart_toStartOf="@id/headerLinearLayout"
        app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/repeatPassTextInputLayout"
        app:layout_constraintEnd_toEndOf="@id/headerLinearLayout"
        app:layout_constraintStart_toStartOf="@id/headerLinearLayout"
        app:layout_constraintTop_toBottomOf="@id/loginTextInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPassTextInputLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password"
        app:layout_constraintBottom_toTopOf="@id/createButton"
        app:layout_constraintEnd_toEndOf="@id/headerLinearLayout"
        app:layout_constraintStart_toStartOf="@id/headerLinearLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPassTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/headerLinearLayout"
        app:layout_constraintStart_toStartOf="@id/headerLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/repeatPassTextInputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>